--- a/index.html
+++ b/index.html
@@ -54,9 +54,20 @@
 			</section>
 			<section data-markdown="markdown/perimeter_ci.md">
 			</section>
-			<section data-markdown="markdown/bear.md">
+			<section class="center">
+				<h2>Площади</h2>
 			</section>
-			<section data-markdown="markdown/flat.md">
+			<section data-markdown="markdown/Square_tri.md">
+			</section>
+			<section data-markdown="markdown/Square_par.md">
+			</section>
+			<section data-markdown="markdown/Square_tra.md">
+			</section>
+			<section data-markdown="markdown/Square_sq.md">
+			</section>
+			<section data-markdown="markdown/Square_di.md">
+			</section>
+			<section data-markdown="markdown/Square_ci.md">
 			</section>
 			<section>
 				<section data-markdown class="center">
