--- a/index.html
+++ b/index.html
@@ -88,17 +88,96 @@
 					</script>
 				</section>
 			</section>
-			<section data-markdown="markdown/Square_tra.md">
+			<section>
+				<section data-markdown class="center">
+					<script type="text/template">
+						### Площадь трапеции
+
+						$$S_{trapezium}=\dfrac{1}{2}(a+b)h$$
+						$$S_{trapezium}=\dfrac{1}{2}d_{1}d_{2} sin\phi$$
+						- $a,b$ – основания
+						- $h$ – высота
+						- $d_1, d_2$ – диагонали
+						- $\phi$ – угол между диагоналями
+					</script>
+				</section>
+				<section data-markdown>
+					<script type="text/template">
+						Пример.Основания трапеции общего вида равны 18 и 6, боковая сторона, равная 7, образует с одним из оснований трапеции угол 150°. Найдите площадь трапеции ABCD.<br>
+						Решение:
+						$$DH=ADsinDAH=7\cdot \dfrac{1}{2}=3,5$$
+						$$S_{trapezium}=\dfrac{1}{2}(AB+CD)DH=\dfrac{18+6}{2}\cdot 3,5=42$$
+					</script>
+				</section>
 			</section>
-			<section data-markdown="markdown/Square_sq.md">
+			<section>
+				<section data-markdown class="center">
+					<script type="text/template">
+						### Площадь квадрата
+						$$S_{square}=a^2$$
+						$$S_{square}=\dfrac{1}{2}d^{2}$$
+						- $a$ – сторона
+						- $d$ – диагональ
+					</script>
+				</section>
+				<section data-markdown>
+					<script type="text/template">
+						Пример.Найдите площадь квадрата, если длина его стороны равна 8 см.<br>
+						Решение:$${\small S_{square}=a^2=8^2=64}$$
+					</script>
+				</section>
 			</section>
-			<section data-markdown="markdown/Square_di.md">
+			<section>
+				<section data-markdown class="center">
+					<script type="text/template">
+						### Площадь ромба
+						$$S_{diamond}=a^2 sin A$$
+						$$S_{diamond}=\dfrac{1}{2}d_{1}d_{2}$$
+						$$S_{diamond}=ah$$
+						- $a$ – сторона
+						- $h$ – высота
+						- $d_1, d_2$ – диагонали
+					</script>
+				</section>
+				<section data-markdown>
+					<script type="text/template">
+						Пример.Одна диагональ ромба составляет 140 см, а вторая – 100 см. Чему равна площадь ромба?<br>
+						Решение:
+						$$S_{diamond}=\dfrac{140 \cdot 100}{2}=7000$$
+						
+					</script>
+				</section>
 			</section>
-			<section data-markdown="markdown/Square_ci.md">
+			<section>
+				<section data-markdown class="center">
+					<script type="text/template">
+						### Площадь круга
+						$$S_{circle}=\pi r^2$$
+						$$S_{circle}=\pi \dfrac{d^2}{2}$$
+						- $r$ – радиус
+						- $d$ – диаметр
+					</script>
+				</section>
+				<section data-markdown>
+					<script type="text/template">
+						Пример.Вычислить площадь круга, ограниченного окружностью радиуса r = 7 см.<br>
+						Решение:
+						$$S_{circle}=\pi r^2=\pi\cdot 7^2=3,14\cdot 49=153,86$$
+						
+					</script>
+				</section>
 			</section>
 			<section id="circ1">
 				<div></div>
 			</section>
+
+
+
+
+
+
+
+
 			<section class="center">
 				<h2>Графики</h2>
 			</section>
