--- a/index.html
+++ b/index.html
@@ -797,6 +797,15 @@
 						});
 					</script>
 				</section>
+				<section data-background-size="contain"> 
+					<h3>Юмор</h3>
+					<img src="html/img/g.jpg">
+				</section>
+				<section data-background-size="contain"> 
+					<h3>Юмор</h3>
+					<img src="html/img/mat.jpg">
+				</section>
+				<section><h3>Юмор</h3><img src="html/img/g1.jpg"></section>
 				
 			<section class="center" data menu-title="Заключительный слайд"> <h2>Спасибо за внимание!</h2></section>
 			
